--- a/blog.hbs
+++ b/blog.hbs
@@ -52,4 +52,29 @@ on
 <br> -->
 {{/each}}
 </div>
+<!-- Footer starts here -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<div class="hero-image">
+  <div class="hero-text">
+     <h5>JOIN US IN THE FIGHT TO END <br> CLIMATE CHANGE </h5>
+
+<!-- Add font awesome icons -->
+<a href="https://www.facebook.com/The-GeoEffect-164138030819261/" class="fa fa-facebook"></a>
+<a href="https://www.instagram.com/the_geoeffect/" class="fa fa-instagram"></a>
+<a href="https://twitter.com/the_geoeffect" class="fa fa-twitter"></a>
+
+
+<p> &copy; Copyright 2017. All rights reserved. </p>
+<img src="adobelogo.png" style="width:70px;height:40px;">
+<img src="GWC.png" style="width:70px;height:50px;">
+</div>
+
+
+  </div>
+</div>
 </body>
+</html>
